syntax = "proto3";

package auth;

option go_package = "github.com/xavicci/taxisgo/proto/auth";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string phone = 4;
}

message RegisterResponse {
  string token = 1;
  User user = 2;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string phone = 4;
  string created_at = 5;
} 